Added new option(s) to disable the display of the "at time" in posts and enable the display of "last modified" date in the posts.
More cleanups in the comments.php output, including fixing a missing language translation string or two
Added a new options tab in the Easel Options for Menubar alone, with more Social icon's for the menubar
Added display:block on #comic

3.1
Changed the sticky pushpin image to 16px
Fix for the breadcrumbs (hopefully)
Timefix for the body classes
fixed the RSS title situation where it duplicated
Fixed the missing language translation string in the comments.php
changed the facebook like button and modified the og:description output
removed the overflow: hidden from .entry - up to end user to adjust the images accordingly.

3.0.8
Changed header.php title code to use a filter
modified a ton of CSS to clean it up
tested comments.php extensively and made some minor code changes
added pagenav jumper in the pagination
removed custom post type from the titles in the archive pages
added additional .menu-wrapper for the menubar
checks for post types were removed in the displaypost.php - it's now up to the user to remove them via CSS or code

3.0.7
Fixed comment display booleans
fixed commpress
fixed custom-header's #header {}, removed the version check for pre 3.4 in both custom-header and custom-background

3.0.6
Bug fix for execution of init/after_theme_setup

3.0.5
Huge cleanup of the comments.php comment-functions.php files.
- comments & pings & trackbacks now stay visible if comments are disabled and comments/pings exist
- enqueu'ing of the comment javascript now moved to init as appropriate instead of in header.php
Menu location in Footer added.  It's centered and cannot use dropdowns.
Deprecating child-functions.php and child-widgets.php for favor of just straight functions.php in child themes.
Removed default background via coded, keeping with style.css usage.
revamped the execution orders and removed old code from the functions.php

3.0.4